# SortingVizualizer

./: CMakeLists.txt  README.md  main.cpp
algos/: timSort.cpp  timSort.h
utils/: vizUtils.cpp  vizUtils.h
